--- a/bank-management-system.vcxproj
+++ b/bank-management-system.vcxproj
@@ -149,6 +149,9 @@
     <ClInclude Include="Transfer.h" />
     <ClInclude Include="Withdraw.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
