Add documentation, add the skeleton of the user interface & add documentation

--- a/bank-management-system.vcxproj
+++ b/bank-management-system.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="src\Transaction.h" />
     <ClInclude Include="src\Transfer.h" />
     <ClInclude Include="src\Withdraw.h" />
+    <ClInclude Include="useless.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
